[package]
name = "infrared"
version = "0.12.0"
authors = ["Johan Kristell <johan@jott.se>"]
edition = "2018"
description = "Infrared remote control library"
repository = "https://github.com/jkristell/infrared"
readme = "README.md"
keywords = ["infrared", "remote", "rc5", "rc6", "nec"]
categories = ["no-std", "embedded"]
license = "MIT OR Apache-2.0"

[features]
default = ["nec", "rc5", "rc6", "sbp", "denon", "remotes", "embedded-hal"]
nec = []
rc5 = []
rc6 = []
sbp = []
denon = []
remotes = []

[dependencies]
embedded-hal = {version = "0.2.4", features = ["unproven"], optional = true}

[dev-dependencies]
vcd = "0.6.1"
dummy-pin = "0.1.1"