[package]
name = "infrared"
version = "0.13.0"
authors = ["Johan Kristell <johan@jott.se>"]
edition = "2018"
description = "Infrared remote control library"
repository = "https://github.com/jkristell/infrared"
readme = "README.md"
keywords = ["infrared", "remote", "rc5", "rc6", "nec"]
categories = ["no-std", "embedded"]
license = "MIT OR Apache-2.0"

[features]
default = ["nec", "rc5", "rc6", "sbp", "denon", "remotes", "embedded-hal"]
nec = []
rc5 = []
rc6 = []
sbp = []
denon = []
remotes = []

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[dependencies]
embedded-hal = {version = "0.2.4", features = ["unproven"], optional = true}
defmt = { version = "0.2.0", optional = true }
log = { version = "0.4.11", optional = true }

[dev-dependencies]
vcd = "0.6.1"
dummy-pin = "0.1.1"
