[package]
name = "infrared"
version = "0.13.0"
authors = ["Johan Kristell <johan@jott.se>"]
edition = "2021"
description = "Infrared remote control library"
repository = "https://github.com/jkristell/infrared"
readme = "README.md"
keywords = ["infrared", "remote", "rc5", "rc6", "nec"]
categories = ["no-std", "embedded"]
license = "MIT OR Apache-2.0"

[workspace]
members = ["examples/vcd-parser"]
exclude = ["examples/bluepill", "examples/rp-pico"]

[features]
default = ["nec", "rc5", "rc6", "sbp", "denon", "remotes", "embedded"]
embedded = ["embedded-hal", "fugit"]
nec = []
rc5 = []
rc6 = []
sbp = []
denon = []
remotes = []

[dependencies]
embedded-hal = {version = "0.2.4", features = ["unproven"], optional = true}
defmt = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }
fugit = { version = "0.3.5", optional = true }

[dev-dependencies]
dummy-pin = "0.1.1"
