[package]
name = "infrared-examples"
version = "0.8.0"
authors = ["Johan Kristell <johan@jott.se>"]
publish = false
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
embedded-hal = "0.2.3"
infrared = { path = "../.." }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
features = ["arduino-uno"]
rev = "e312e6e1620bd09470afee71e6590da0ba96f369"

[dependencies.avr-device]
version = "0.5"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
