[package]
name = "bluepill-examples"
version = "0.8.0"
authors = ["Johan Kristell <johan@jott.se>"]
publish = false
edition = "2018"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6.7"
rtt-target = { version = "0.3", features = ["cortex-m"] }
panic-rtt-target = { version ="0.1.1", features = ["cortex-m"] }
stm32f1xx-hal = { version = "0.7", features = ["rt", "stm32f103", "medium", "stm32-usbd"] }
usb-device = "0.2.5"
usbd-hid = "0.5"
embedded-hal = "0.2"
cortex-m-rtic = "0.6.0-rc.2"
dwt-systick-monotonic = "0.1.0-rc.1"
infrared = { path = "../.." }

[profile.release]
codegen-units = 1
opt-level = 's'
incremental = false
debug = true
lto = true

[profile.dev]
codegen-units = 1
opt-level = 's'
incremental = false
debug = true
lto = true

