[package]
name = "bluepill-examples"
version = "0.8.0"
authors = ["Johan Kristell <johan@jott.se>"]
publish = false
edition = "2018"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
stm32f1xx-hal = { version = "0.9", features = ["rt", "rtic", "stm32f103", "medium", "stm32-usbd"] }
defmt = "0.3"
defmt-rtt = "0.3.1"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
usb-device = "0.2.5"
usbd-hid = "0.5"
embedded-hal = "0.2"
cortex-m-rtic = "1"
rtic-monotonic = "1"
heapless = "0.7.10"
infrared = { path = "../..", features = ["defmt"] }

[profile.release]
codegen-units = 1
opt-level = 's'
incremental = false
debug = 2

[profile.dev]
codegen-units = 1
opt-level = 's'
incremental = false
debug = 2
lto = true
