[package]
name = "infrared-example"
version = "0.1.0"
authors = ["Johan Kristell <johan@jott.se>"]
edition = "2018"

[dependencies]
cortex-m-semihosting = "0.3"
cortex-m-rt = "0.6"
cortex-m = "0.6.0"
nucleo-f401re = "0.2"
panic-semihosting = "0.5"
heapless = "0.4"
infrared = { path = "../.." }

[profile.release]
debug = true
lto = true
