[package]
name = "rp2040-examples"
version = "0.1.0"
authors = ["Riskable <riskable@youknowwhat.com>"]
publish = false
edition = "2018"

[dependencies]
panic-halt= "0.2"
rtt-target = {version = "0.3", features = ["cortex-m"]}
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2"
cortex-m-rtic = "1"
rtic-monotonic = "1"
infrared = { path = "../..", features = ["defmt"] }
rp2040-hal = {version = "0.4", features = ["rt"]}
rp2040-boot2 = { version = "0.2.0"}

