[package]
name = "infrared-examples"
version = "0.1.0"
authors = ["Johan Kristell <johan@jott.se>"]
publish = false
edition = "2018"

[dependencies]
stm32f1xx-hal = { version = "0.5", features = ["rt", "stm32f103", "medium"] }
cortex-m = "0.6"
cortex-m-rt = "0.6.7"
panic-semihosting = "0.5"
cortex-m-semihosting = "0.3.3"

[dependencies.infrared]
path = "../.."
features = ["remotes", "embedded-hal"]

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true

