[package]
name = "infrared-examples"
version = "0.1.0"
authors = ["Johan Kristell <johan@jott.se>"]
publish = false
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6.7"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
stm32f1xx-hal = { version = "0.6", features = ["rt", "stm32f103", "medium", "stm32-usbd"] }
usb-device = "0.2.5"
# Use git until the MediaKeyboard support is released
usbd-hid = { git = "https://github.com/twitchyliquid64/usbd-hid.git", rev = "42fff0b8" }
embedded-hal = "0.2"
cortex-m-rtic = "0.5.5"

[dependencies.infrared]
path = "../.."

[profile.release]
codegen-units = 1
opt-level = 's'
incremental = false
debug = true
lto = true

